Refactor: Move files into react directory

--- a/shortcut_heaven_react/public/manifest.json
+++ b/shortcut_heaven_react/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Shortcut King",
-  "name": "Learn shorcuts by playing this awesome game",
+  "name": "Learn shortcuts by playing this awesome game",
   "icons": [
     {
       "src": "favicon.ico",
