--- a/shortcut_heaven_react/package.json
+++ b/shortcut_heaven_react/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "shortcut_heaven",
+  "name": "shortcut_heaven_react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "hotkeys-js": "^3.3.1",
+    "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-js": "react-scripts start",
     "build": "react-scripts build",
+    "watch-css": "sass --watch ./src/sass/scss:./src/sass/css",
+    "start": "npm-run-all -p watch-css start-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
